<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvLetterPCA"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_a"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/viewComputer"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCB" />


    <TextView
        android:id="@+id/tvLetterPCB"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_b"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCA"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCC" />

    <TextView
        android:id="@+id/tvLetterPCC"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_c"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCB"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCD" />

    <TextView
        android:id="@+id/tvLetterPCD"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_d"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCC"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCE" />

    <TextView
        android:id="@+id/tvLetterPCE"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_e"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCD"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCF" />

    <TextView
        android:id="@+id/tvLetterPCF"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_f"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCE"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCG" />

    <TextView
        android:id="@+id/tvLetterPCG"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_g"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCF"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCH" />

    <TextView
        android:id="@+id/tvLetterPCH"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_h"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCG"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCI" />

    <TextView
        android:id="@+id/tvLetterPCI"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_i"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCH"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterPCJ" />

    <TextView
        android:id="@+id/tvLetterPCJ"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_j"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterPCI"
        app:layout_constraintRight_toRightOf="@id/viewComputer" />
</merge>